# spotidal

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/spotidal/: __init__.py  auth.py  auth_sp.py  auth_td.py  cache.py  parse_sp_td.py  sp_auth.py  sp_fetch.py  sp_utils.py  spotidal.py  td_fetch copy.py  td_fetch.py  td_fetcher_helper.py  td_fetching_helper.py  td_sync.py  td_utils.py  user_playlists.py  utils.py
tests/: __init__.py  test_spotidal.py
