[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotidal"
version = "0.1.0"
description = "An app threesome that offers you love. Improves your quality of life transferring your spotify playlists to tidal platform."
readme = "README.rst"
authors = [
  {name = "rita patacas", email = "ritsaptcs@gmail.com"}
]
maintainers = [
  {name = "rita patacas", email = "ritsaptcs@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ritapatacas/spotidal/issues"
changelog = "https://github.com/ritapatacas/spotidal/blob/master/changelog.md"
homepage = "https://github.com/ritapatacas/spotidal"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

